--- a/css/style.css
+++ b/css/style.css
@@ -12879,6 +12879,7 @@ select.selected {
   width: 100%;
   max-width: 308px;
   margin-right: 30px;
+  flex-shrink: 0;
 }
 
 .account-block__profile-block {
@@ -12941,6 +12942,11 @@ select.selected {
   position: absolute;
   display: block;
   flex-shrink: 0;
+  cursor: pointer;
+}
+
+.account-block__profile-photo-file svg path {
+  cursor: pointer;
 }
 
 .account-block__profile-file-input {
@@ -13226,6 +13232,123 @@ select.selected {
   background-color: rgba(232, 7, 15, 0.6);
 }
 
+.account-block__statement-block {
+  position: relative;
+  display: block;
+}
+
+.account-block__statement-title {
+  display: block;
+  font-size: 48px;
+  line-height: 1.2;
+  font-weight: 800;
+  color: #0b3b9d;
+  margin-bottom: 30px;
+}
+
+.rwd-table tr {
+  border: 1px solid #ddd;
+}
+.rwd-table th {
+  display: none;
+}
+.rwd-table td {
+  display: block;
+}
+.rwd-table td:first-child {
+  padding-top: 0.5em;
+}
+.rwd-table td:last-child {
+  padding-bottom: 0.5em;
+}
+.rwd-table td:before {
+  content: attr(data-th) ": ";
+  font-weight: bold;
+  width: 6.5em;
+  display: inline-block;
+}
+
+@media (min-width: 480px) {
+  .rwd-table td:before {
+    display: none;
+  }
+}
+.rwd-table th, .rwd-table td {
+  text-align: left;
+}
+
+@media (min-width: 480px) {
+  .rwd-table th, .rwd-table td {
+    display: table-cell;
+    padding: 0.25em 0.5em;
+    border-bottom: 1px solid #e9eff0;
+  }
+}
+
+.rwd-table {
+  background-color: #fff;
+  font-family: 'Nunito', sans-serif;
+  color: #0b3b9d;
+  overflow: hidden;
+  font-size: 20px;
+  word-break: break-word;
+  border-spacing: 0;
+  width: 100%;
+}
+.rwd-table tr {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.rwd-table th, .rwd-table td {
+  margin: 0.5em 1em;
+}
+
+.rwd-table td {
+  max-width: 300px;
+}
+
+.account-block__table-heading th {
+  border-top: 1px solid #e9eff0;
+}
+
+.account-block__table-heading th:first-child {
+  border-left: 1px solid #e9eff0;
+}
+
+.account-block__table-heading th:last-child {
+  border-right: 1px solid #e9eff0;
+}
+
+.rwd-table tr td:first-child {
+  border-left: 1px solid #e9eff0;
+}
+
+.rwd-table tr td:last-child {
+  border-right: 1px solid #e9eff0;
+}
+
+.td-minus {
+  color: #e8070f;
+}
+
+@media (min-width: 480px) {
+  .rwd-table th, .rwd-table td {
+    padding: 10px;
+  }
+}
+
+.rwd-table th, .rwd-table td:before {
+  color: #0b3b9d;
+}
+
+.account-block__table-heading {
+  background-color: #f1f5f6;
+}
+
+.rwd-table.members th, .rwd-table.members td {
+  padding: 20px 30px;
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .account-block__wrapper {
     display: block;
@@ -13311,6 +13434,25 @@ select.selected {
   .account-block__navigation-block ul {
     font-size: 16px;
   }
+  .account-block__statement-title {
+    font-size: 24px;
+  }
+  .rwd-table {
+    font-size: 16px;
+  }
+  .rwd-table tr td {
+    border: 1px solid #e9eff0;
+  }
+  .td--title {
+    background-color: #f1f5f6;
+  }
+  .rwd-table.members th, .rwd-table.members td {
+    display: table-cell;
+    padding: 10px;
+  }
+  .rwd-table.members td:before {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -13366,6 +13508,19 @@ select.selected {
   .account-block__complete-title, .account-block__details-title {
     font-size: 24px;
   }
+  .account-block__statement-title {
+    font-size: 30px;
+  }
+  .rwd-table tr {
+    font-size: 12px;
+  }
+  .rwd-table th, .rwd-table td {
+    max-width: 90px;
+    word-break: break-word;
+  }
+  .rwd-table.members th, .rwd-table.members td {
+    max-width: 100%;
+  }
 }
 
 @media screen and (min-width: 1200px) and (max-width: 1365px) {
@@ -13392,5 +13547,8 @@ select.selected {
   }
   .account-block__details-option-title {
     max-width: 150px;
+  }
+  .account-block__statement-title {
+    font-size: 30px;
   }
 }
